[gd_scene load_steps=2 format=3 uid="uid://dmfsr0v1bhxbp"]

[ext_resource type="Script" uid="uid://cled5jx0lwoxq" path="res://score.gd" id="1_t1x8i"]

[node name="Score" type="Node2D"]
script = ExtResource("1_t1x8i")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.7670034, 0.88246983, 0.9477405, 1)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 449.0
offset_top = 18.0
offset_right = 703.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.08627451, 0.13333334, 1, 1)
theme_override_font_sizes/font_size = 41
text = "Leaderboard"
vertical_alignment = 1

[node name="EasyScore" type="ItemList" parent="."]
offset_left = 89.0
offset_top = 123.0
offset_right = 367.0
offset_bottom = 525.0
theme_override_font_sizes/font_size = 20

[node name="EasyLabel" type="Label" parent="."]
offset_left = 199.0
offset_top = 86.0
offset_right = 255.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0.003921569, 0.019607844, 0.011764706, 1)
theme_override_font_sizes/font_size = 26
text = "Easy"

[node name="MediumScore" type="ItemList" parent="."]
offset_left = 429.0
offset_top = 123.0
offset_right = 707.0
offset_bottom = 525.0
theme_override_font_sizes/font_size = 20

[node name="MediumLabel" type="Label" parent="."]
offset_left = 526.0
offset_top = 85.0
offset_right = 630.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.003921569, 0.019607844, 0.011764706, 1)
theme_override_font_sizes/font_size = 26
text = "Medium"

[node name="HardScore" type="ItemList" parent="."]
offset_left = 772.0
offset_top = 124.0
offset_right = 1050.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 20

[node name="HardLabel" type="Label" parent="."]
offset_left = 890.0
offset_top = 86.0
offset_right = 952.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0.003921569, 0.019607844, 0.011764706, 1)
theme_override_font_sizes/font_size = 26
text = "Hard"

[node name="StartOver" type="Button" parent="."]
offset_left = 352.0
offset_top = 555.0
offset_right = 533.0
offset_bottom = 621.0
text = "Start Over"

[node name="Quit" type="Button" parent="."]
offset_left = 597.0
offset_top = 555.0
offset_right = 778.0
offset_bottom = 621.0
text = "Quit"

[connection signal="pressed" from="StartOver" to="." method="_on_start_over_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
